# air_bumper

./: CMakeLists.txt  README.md  package.xml
config/: pclgen.yaml
include/: air_bumper.h  grad_recover.h
launch/: air_bumper.launch  air_bumper_sitl.launch  grad_recover.launch  grad_recover_sitl.launch  imu_detection.launch  imu_detection_sitl.launch  pclgen.launch  pclgen_sitl.launch
scripts/: run.sh
scripts/real/: .tmuxinator.yml
scripts/sitl/: .tmuxinator.yml
simulation/PX4-Autopilot/Tools/sitl_gazebo/models/3d_gpu_lidar/: 3d_gpu_lidar.sdf  model.config
simulation/PX4-Autopilot/Tools/sitl_gazebo/models/iris_3d_gpu_lidar/: iris_3d_gpu_lidar.sdf  model.config
simulation/PX4-Autopilot/Tools/sitl_gazebo/worlds/: air_bumper.world
simulation/PX4-Autopilot/launch/: px4_air_bumper.launch  single_vehicle_spawn_basic.launch
src/: add_point_cloud_node.cpp  air_bumper.cpp  air_bumper_node.cpp  grad_recover.cpp  grad_recover_node.cpp  imu_detection.cpp
